--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "quality",
     "air"
   ],
-
   "author": "Ulises Gascon",
   "license": "AGPL-3.0",
   "standard": {
@@ -28,7 +27,8 @@
       "jest"
     ],
     "ignore": [
-      "/docs/**/*.js"
+      "/docs/**/*.js",
+      "/LEGACY/**/*.js"
     ]
   },
   "husky": {
@@ -45,6 +45,11 @@
     "husky": "^4.2.5",
     "jest": "^26.1.0",
     "nodemon": "^2.0.4",
-    "standard": "^14.3.4"
+    "standard": "^14.3.4",
+    "supertest": "^4.0.2"
+  },
+  "dependencies": {
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1"
   }
 }
